FIX: Vertical alignment for fat date

--- a/css/modules.css
+++ b/css/modules.css
@@ -8,7 +8,7 @@
 	text-align: center;
 	color: #333;
 	font-size: 18px;
-	line-height: 18px;
+	line-height: 55px;
 }
 
 .fatDate .dayOfMonth {
